# image-compute

./: .gitignore  Cargo.toml  build.rs  flake.nix
shaders/: arity1.wgsl  arity2.wgsl  plane_fit.wgsl  transform.wgsl  unary.wgsl
src/: buffers.rs  lib.rs  shaders.rs
