[package]
name = "image-compute"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.23"
thiserror = "2.0"
tracing = { version = "0.1" }
wgpu = { version = "26.0", default-features = false, features = [
    "wgsl",
    "std",
    "parking_lot",
] }

[build-dependencies]
wgsl_to_wgpu = "0.15"


[dev-dependencies]
wgpu = { version = "26.0", default-features = false, features = [
    "std",
    "parking_lot",
    "wgsl",
    # "dx12",
    # "metal",
    "vulkan",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
eyre = "0.6"
smol = "2.0"
float-ord = "0.3"
primes = "0.4"
