[package]
name = "image-compute"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 3

[dependencies]
bytemuck = "1.23"
itertools = "0.14.0"
thiserror = "2.0"
tracing = { version = "0.1" }
wgpu = { version = "26.0", default-features = false, features = [
    "wgsl",
    "std",
    "parking_lot",
] }

[build-dependencies]
wgsl_to_wgpu = "0.15"


[dev-dependencies]
wgpu = { version = "26.0", default-features = false, features = [
    "std",
    "parking_lot",
    "wgsl",
    # "dx12",
    # "metal",
    "vulkan",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
eyre = "0.6"
smol = "2.0"
float-ord = "0.3.2"
primes = "0.4.0"
high_precision_clock = "0.1.9"
rand = "0.9.2"
rayon = "1.10.0"
itertools = "0.14.0"
